--- a/main.html
+++ b/main.html
@@ -7,6 +7,36 @@
 </head>
 
 <body>
+	<form>
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder="Name">
+		<br>
+		<br>
+		<label for="phone">Phone Number:</label>
+		<input type="text" id="phone" placeholder="Phone Number">
+		<br>
+		<br>
+		<label for="address">Address:</label>
+		<input type="text" id="address" placeholder="Address">
+		<br>
+		<br>
+		<label for ="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox">
+		<br>
+		<br>
+		<label for="multiSelect">Please select your preferred breeds</label>
+            <select name="Breeds" id="multiSelect">
+                <option value="A">Golden</option>
+                <option value="B">German</option>
+                <option value="C">Pomer</option>
+                <option value="D">RotWe</option>
+            </select>
+		<br>
+		<br>
+
+		<!-- <label for ="submit">Submit</label> -->
+		<input type="submit" id="submit" value="Submit">
+    </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
