--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 		<br>
 		<br>
 
-		<!-- <label for ="submit">Submit</label> -->
+		<label for ="submit">Submit</label>
 		<input type="submit" id="submit" value="Submit">
     </form>
 	<!-- the entire body must be written by student -->
